crates/solite-lexer/src/snapshots/solite_lexer__test_0.snap
---
source: crates/solite-lexer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    (
        "select",
        Token {
            kind: Select,
            start: 0,
            end: 6,
            value: None,
            contents: "select",
        },
    ),
    (
        " 1",
        Token {
            kind: Number,
            start: 6,
            end: 8,
            value: None,
            contents: " 1",
        },
    ),
    (
        " +",
        Token {
            kind: Plus,
            start: 8,
            end: 10,
            value: None,
            contents: " +",
        },
    ),
    (
        " 2",
        Token {
            kind: Number,
            start: 10,
            end: 12,
            value: None,
            contents: " 2",
        },
    ),
    (
        "",
        Token {
            kind: Eof,
            start: 12,
            end: 12,
            value: None,
            contents: "",
        },
    ),
]
