crates/solite-lexer/src/snapshots/solite_lexer__test_1.snap
---
source: crates/solite-lexer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    (
        "select",
        Token {
            kind: Select,
            start: 0,
            end: 6,
            value: None,
            contents: "select",
        },
    ),
    (
        " 'rooga'",
        Token {
            kind: String,
            start: 6,
            end: 14,
            value: Text(
                " 'rooga'",
            ),
            contents: " 'rooga'",
        },
    ),
    (
        "",
        Token {
            kind: Eof,
            start: 14,
            end: 14,
            value: None,
            contents: "",
        },
    ),
]
